human_written_tests/WebAssembly/processed_control_flow_validation/test_call_2.wast
(assert_invalid
  (module
    (func $type-num-vs-num (i32.eqz (call 1)))
    (func (result i64) (i64.const 1))
  )
  "type mismatch"
)